--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,7 @@ $wi-path: "~weather-icons/font";
 @import "~weather-icons/sass/weather-icons-wind.scss";
 @import "mixins";
 @import "weather";
+@import "info";
 
 html, body {
   margin: 0;
